# msteams-notify-with-sound

./: Cargo.toml  LICENSE  README.md  msteams-notify.service
src/: main.rs
