[package]
name = "msteams-notify-with-sound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
zbus = { version = "3", default_features = false, features = ["tokio"]}
